# h2s-main-jun26

./: .gitignore  DESIGN.md  README.md  SUBMISSION.txt
.github/workflows/: ci.yml
backend/: .env.example  .vercelignore  README.md  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: __init__.py  main.py  settings.py
backend/app/ai/: __init__.py  fallbacks.py  provider.py  service.py
backend/app/api/: __init__.py  assist.py  checkins.py  data.py  deps.py  exam_dates.py  health.py  insights.py
backend/app/data/: __init__.py  db.py  models.py  repository.py
backend/app/domain/: __init__.py  crisis.py  insights.py  interventions.py  rules.py  season.py  triggers.py
backend/app/schemas/: __init__.py  assist.py  checkin.py  data.py  insights.py
backend/tests/: conftest.py  test_ai.py  test_assist_api.py  test_checkins_api.py  test_crisis.py  test_data_api.py  test_health.py  test_insights.py  test_insights_api.py  test_rules.py  test_season.py  test_triggers.py
frontend/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/research/: 02-evidence-based-interventions.md  04-safety-ethics-privacy.md  05-accessibility-ux-best-practices.md  README.md
frontend/scripts/: sync-research.mjs
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: BehavioralActivation.css  BehavioralActivation.test.tsx  BehavioralActivation.tsx  BreathingPacer.css  BreathingPacer.test.tsx  BreathingPacer.tsx  DataControls.css  DataControls.test.tsx  DataControls.tsx  EnergyScale.tsx  ExamDateManager.css  ExamDateManager.test.tsx  ExamDateManager.tsx  HelpResources.css  HelpResources.test.tsx  HelpResources.tsx  InsightCards.css  InsightCards.test.tsx  InsightCards.tsx  InterventionCard.css  (+34 more)
research/: 01-exam-stress-india.md  03-app-landscape.md
(+26 files in other folders)
