[project]
name = "softreset-backend"
version = "0.1.0"
description = "Soft Reset — a private, research-grounded wellness companion for exam aspirants (backend)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

# Treat this as a "virtual" project: uv installs the dependencies into the venv
# but does not try to build `app` as a distributable package. Imports resolve
# via pytest/mypy pythonpath from the backend/ directory.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
# Sensible, quality-focused defaults: pycodestyle, pyflakes, import-sorting,
# bugbear, pyupgrade, comprehensions, simplify.
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
# SQLModel/SQLAlchemy descriptors trip a couple of strict-mode edges; we keep
# strict on but allow the framework's dynamic bits without drowning in noise.
warn_unused_ignores = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Make `app` importable without installing it (package = false above).
pythonpath = ["."]
filterwarnings = [
    # Transitive framework deprecation from Starlette's TestClient (not our code).
    # Matched by message only — Starlette uses a custom warning class.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
